--- a/roles/k3s_server_post/tasks/cilium.yml
+++ b/roles/k3s_server_post/tasks/cilium.yml
@@ -170,15 +170,15 @@
         {% if cilium_mode == "native" or (cilium_bgp and cilium_exportPodCIDR != 'false') %}
         --helm-set ipv4NativeRoutingCIDR={{ cluster_cidr }}
         {% endif %}
-        {% if cilium_l2 == "true" %}
+        # {% if cilium_l2 == true %}
         --helm-set l2announcements.enabled=true
         --helm-set kubeProxyReplacement=true
         --helm-set ipam.mode=kubernetes
         --helm-set externalIPs.enabled=true
-        --helm-set k8sClientRateLimit.qps={cilium_l2_qps} \
-        --helm-set k8sClientRateLimit.burst={cilium_l2_burst} \
-        {% endif %}
-        --helm-set k8sServiceHost={apiserver_endpoint}
+        --helm-set k8sClientRateLimit.qps={{ cilium_l2_qps }} \
+        --helm-set k8sClientRateLimit.burst={{ cilium_l2_burst }} \
+        # {% endif %}
+        --helm-set k8sServiceHost="127.0.0.1"
         --helm-set k8sServicePort="6443"
         --helm-set routingMode={{ cilium_mode | default("native") }}
         --helm-set autoDirectNodeRoutes={{ "true" if cilium_mode == "native" else "false" }}
