--- a/roles/k3s_server_post/tasks/main.yml
+++ b/roles/k3s_server_post/tasks/main.yml
@@ -14,6 +14,14 @@
   tags: metallb
   when: kube_vip_lb_ip_range is not defined and (cilium_bgp is not defined or cilium_l2 is not defined or cilium_iface is not defined)
 
+- name: Deploy system-upgrade-controller
+  include_tasks: auto_upgrade.yml
+  tags: upgrade
+  when: auto_upgrade is defined and auto_upgrade == true
+
+- name: Deploy system-upgrade-controller
+  include_tasks: ingress.yml
+
 - name: Remove tmp directory used for manifests
   file:
     path: /tmp/k3s
