--- a/roles/k3s_server_post/tasks/cilium.yml
+++ b/roles/k3s_server_post/tasks/cilium.yml
@@ -178,7 +178,7 @@
         --helm-set k8sClientRateLimit.qps={{ cilium_l2_qps }} \
         --helm-set k8sClientRateLimit.burst={{ cilium_l2_burst }} \
         # {% endif %}
-        --helm-set k8sServiceHost="127.0.0.1"
+        --helm-set k8sServiceHost="{{ apiserver_endpoint }}"
         --helm-set k8sServicePort="6443"
         --helm-set routingMode={{ cilium_mode }}
         --helm-set autoDirectNodeRoutes={{ "true" if cilium_mode == "native" else "false" }}
@@ -225,6 +225,30 @@
         label: "{{ item.type }}/{{ item.name }}"
       when: >-
         not item.check_hubble | default(false) or (item.check_hubble | default(false) and cilium_hubble)
+
+    - name: Configure Cilium L2
+      when: cilium_l2
+      block:
+        - name: Copy L2 CR manifests to first master
+          ansible.builtin.template:
+            src: ciliuml2.crs.j2
+            dest: /tmp/k3s/cilium-l2.yaml
+            owner: root
+            group: root
+            mode: "0755"
+
+        - name: Apply L2 CR manifests
+          ansible.builtin.command:
+            cmd: "{{ k3s_kubectl_binary | default('k3s kubectl') }} apply -f /tmp/k3s/cilium-l2.yaml"
+          register: apply_l2
+          changed_when: "'configured' in apply_l2.stdout or 'created' in apply_l2.stdout"
+          failed_when: "'is invalid' in apply_l2.stderr"
+          ignore_errors: true
+
+        - name: Print error if L2 manifest apply fails
+          when: "'is invalid' in apply_l2.stderr"
+          ansible.builtin.debug:
+            msg: "{{ apply_l2.stderr }}"
 
     - name: Configure Cilium BGP
       when: cilium_bgp
