--- a/roles/reset/tasks/main.yml
+++ b/roles/reset/tasks/main.yml
@@ -16,6 +16,18 @@
   changed_when: pkill_containerd_shim_runc.rc == 0
   failed_when: false
 
+- name: Remove any lingering Cilium interfaces (important for network stability after uninstall)
+  ansible.builtin.shell: |
+    for iface in cilium_host cilium_net cilium_vxlan; do
+      if ip link show $iface &> /dev/null; then
+        ip link delete $iface
+      fi
+    done
+  args:
+    executable: /bin/bash
+  ignore_errors: true
+  changed_when: false
+
 - name: Umount k3s filesystems
   ansible.builtin.include_tasks: umount_with_children.yml
   with_items:
@@ -35,6 +47,8 @@
     state: absent
   with_items:
     - /usr/local/bin/k3s
+    - /usr/local/bin/cilium 
+    - /usr/bin/cilium 
     - "{{ systemd_dir }}/k3s.service"
     - "{{ systemd_dir }}/k3s-node.service"
     - /etc/rancher/k3s
