--- a/roles/k3s_server_post/tasks/cilium.yml
+++ b/roles/k3s_server_post/tasks/cilium.yml
@@ -190,6 +190,10 @@
         --helm-set hubble.ui.enabled={{ "true" if cilium_hubble else "false" }}
         --helm-set authentication.mutual.spire.enabled={{ "true" if cilium_mtls else "false" }}
         --helm-set authentication.mutual.spire.install.enabled={{ "true" if cilium_mtls else "false" }}
+        --helm-set encryption.enabled={{ "true" if cilium_encryption else "false" }}
+        {% if cilium_encryption is not false %}
+        --helm-set encryption.type={{ cilium_encryption_type | default('wireguard') }}
+        {% endif %}
         {% if kube_proxy_replacement is not false %}
         --helm-set bpf.loadBalancer.algorithm={{ bpf_lb_algorithm }}
         --helm-set bpf.loadBalancer.mode={{ bpf_lb_mode }}
