--- a/roles/reset/tasks/main.yml
+++ b/roles/reset/tasks/main.yml
@@ -1,4 +1,36 @@
 ---
+- name: Check if Cilium CLI exists
+  ansible.builtin.stat:
+    path: /usr/local/bin/cilium
+  register: cilium_cli_exists
+
+- name: Uninstall Cilium via CLI if available (before stopping k3s)
+  ansible.builtin.command: cilium uninstall --wait
+  failed_when: false
+  changed_when: false
+  when: cilium_cli_exists.stat.exists
+  environment:
+    KUBECONFIG: "{{ ansible_user_dir }}/.kube/config"
+
+- name: Remove Cilium SPIRE namespace (before stopping k3s)  
+  ansible.builtin.command: kubectl delete namespace cilium-spire --ignore-not-found=true --wait=false
+  failed_when: false
+  changed_when: false
+  environment:
+    KUBECONFIG: "{{ ansible_user_dir }}/.kube/config"
+
+- name: Force delete any remaining Cilium resources
+  ansible.builtin.command: "{{ item }}"
+  with_items:
+    - kubectl delete daemonset cilium -n kube-system --ignore-not-found=true --wait=false
+    - kubectl delete deployment cilium-operator -n kube-system --ignore-not-found=true --wait=false  
+    - kubectl delete deployment hubble-relay -n kube-system --ignore-not-found=true --wait=false
+    - kubectl delete deployment hubble-ui -n kube-system --ignore-not-found=true --wait=false
+  failed_when: false
+  changed_when: false
+  environment:
+    KUBECONFIG: "{{ ansible_user_dir }}/.kube/config"
+
 - name: Disable services
   ansible.builtin.systemd:
     name: "{{ item }}"
@@ -47,8 +79,9 @@
     state: absent
   with_items:
     - /usr/local/bin/k3s
-    - /usr/local/bin/cilium 
-    - /usr/bin/cilium 
+    - /usr/local/bin/cilium
+    - /usr/bin/cilium
+    - /tmp/k3s/cilium-* 
     - "{{ systemd_dir }}/k3s.service"
     - "{{ systemd_dir }}/k3s-node.service"
     - /etc/rancher/k3s
